objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
        <inlineHelpText>The customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the amount additionally discounted on this quote.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>"By Subscription End Date" creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. "Single Contract" creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>"By Subscription End Date" creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. "Single Contract" creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Subscription End Date</fullName>
                    <default>true</default>
                    <label>By Subscription End Date</label>
                </value>
                <value>
                    <fullName>Single Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>This is a Roll-Up Summary field.</description>
        <inlineHelpText>This is a Roll-Up Summary field.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. This value can be overridden at the individual line item level. Any line items that don't have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been opened.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,"Draft" ),ISPICKVAL( SBQQ__Status__c ,"In Review"),ISPICKVAL( SBQQ__Status__c , "Approved"), ISPICKVAL( SBQQ__Status__c , "Presented")),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on "Generate Document" screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ automatically selects the template specified here when you click "Generate Document"</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products on this quote.</description>
        <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount that applies to this quote unless overridden on line item level.</description>
        <inlineHelpText>Distributor discount that applies to this quote unless overridden on line item level.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor for this quote. Defaulted from partner on opportunity with role of "Distributor".</description>
        <inlineHelpText>Distributor for this quote. Defaulted from partner on opportunity with role of "Distributor".</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Quotes</relationshipLabel>
        <relationshipName>DistributorQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentStatus__c</fullName>
        <description>Indicates the status of your Document.</description>
        <inlineHelpText>Indicates the status of your Document: Pending, Sent, Failed.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EmailTemplateId__c</fullName>
        <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
        <inlineHelpText>If you have a specific email template to use for documents generated and emailed from this quote, enter the email template ID here.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c)),TODAY() + $Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c, null)</defaultValue>
        <description>Date after which the Quote is no longer valid</description>
        <inlineHelpText>Date after which the Quote is no longer valid</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
        <description>Used with multi-segment Products to prorate first segment.</description>
        <inlineHelpText>For multi-segment Products, enter the end date in order to prorate first segment.</inlineHelpText>
        <label>First Segment Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on all adjusted quote line on quote if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on all adjusted quote line on quote if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <description>Unique key used in identifying "shopping cart" quotes without relying on internal IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal unique key used for identifying "shopping cart" quotes without relying on internal IDs</inlineHelpText>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option that allows you to use SolutionGroups(TM) or ad hoc groups to categorize and subtotal quote line items.</description>
        <inlineHelpText>Select this option to use SolutionGroups(TM) or add your own groups on the Edit Lines page to categorize and subtotal quote line items.</inlineHelpText>
        <label>Group Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsPrinted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Option which when checked prints individual line items on the PDF document.</description>
        <inlineHelpText>Select the checkbox to print individual line items on the generated PDF quote document for group quotes.</inlineHelpText>
        <label>Print Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>Total List Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>List Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items on this quote.</description>
        <inlineHelpText>Default markup rate applied to line items on this quote. You'll be able to override this value on group and line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master contract with which subscription products in this quote are to be co-terminated.</description>
        <inlineHelpText>Master contract with which subscription products in this quote are to be co-terminated.</inlineHelpText>
        <label>Master Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes</relationshipLabel>
        <relationshipName>CoTerminatedQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Total Net Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>Net Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__Notes__c</fullName>
        <description>Notes printed on the generated PDF document.</description>
        <inlineHelpText>Notes printed on the generated PDF document.</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with this Quote.</description>
        <inlineHelpText>Opportunity associated with this Quote.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderByQuoteLineGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged while setting the Quote to "Ordered", an Order will be created for each Quote Line Group with their associated Quote Lines.</description>
        <inlineHelpText>If flagged while setting the Quote to "Ordered", an Order will be created for each Quote Line Group with their associated Quote Lines.</inlineHelpText>
        <label>Order By Quote Line Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBy__c</fullName>
        <description>The Quote Line field used to determine order grouping.</description>
        <inlineHelpText>The Quote Line field used to determine order grouping.</inlineHelpText>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ProductFamily__c</fullName>
                </value>
                <value>
                    <fullName>QuantityBasedFormulaField__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote's ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote's ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag to drive automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from this quote, if it is a primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Quote is an Amend: Re-Quote, this field points to the original quote.</description>
        <inlineHelpText>If this Quote record represents an Amend: Re-Quote, use this field to link back to the original quote.</inlineHelpText>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Amend: Re-Quotes</relationshipLabel>
        <relationshipName>ChangeOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaperSize__c</fullName>
        <description>Paper size of this document.</description>
        <inlineHelpText>Choose the paper size for this document.</inlineHelpText>
        <label>Paper Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaperSize</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Discount extended to the partner on this opportunity.</description>
        <inlineHelpText>Discount extended to the partner on this opportunity.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary partner on this deal (if any). Defaulted to partner marked as primary in Partners related list on the opportunity.</description>
        <inlineHelpText>Primary partner on this deal (if any). This field defaults to the partner marked as primary in the Partners related list on the opportunity.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Quotes</relationshipLabel>
        <relationshipName>PartnerQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <inlineHelpText>Terms that govern payment of the items in this quote.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book associated with this Quote.</description>
        <inlineHelpText>Price Book associated with this Quote.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricebookId__c</fullName>
        <description>ID of the Price Book used by this quote.</description>
        <inlineHelpText>ID of the Price Book used by this quote.</inlineHelpText>
        <label>Pricebook ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for the quote. This person's name will appear on generated quote document.</description>
        <inlineHelpText>Primary contact for the quote. This person's name will appear on generated quote document.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox which if checked designates the quote as the Primary Quote</description>
        <inlineHelpText>Select this checkbox to designate this quote as the primary one on the opportunity and sync quote line items with opportunity line items.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLanguage__c</fullName>
        <description>Language used for this Quote when mass generating Quote Documents</description>
        <inlineHelpText>Language used for this Quote when mass generating Quote Documents</inlineHelpText>
        <label>Quote Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexican)</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcessId__c</fullName>
        <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
        <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
        <label>Quote Process Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularAmount__c</fullName>
        <description>Roll up of regular amounts of quote products.</description>
        <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
        <label>Regular Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__RegularTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep responsible for this quote if different from the user who owns the quote record.</description>
        <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the quote record.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCountry__c</fullName>
        <description>Country on the Ship To address for this quote.</description>
        <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote.</description>
        <inlineHelpText>Source of cloned quote. If cloned, this references the original quote cloned.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Source)</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>